--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   google_fonts: ^4.0.4
+  intl: ^0.20.2
+  flutter_localization: ^0.3.3
 
 
 
