--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^4.0.4
   intl: ^0.20.2
   flutter_localization: ^0.3.3
+  custom_sliding_segmented_control: ^1.8.5
 
 
 
