--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.20.2
   flutter_localization: ^0.3.3
   custom_sliding_segmented_control: ^1.8.5
+  lucide_icons_flutter: ^3.0.7
 
 
 
